--- a/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
@@ -12,14 +12,12 @@
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<string>IBUIView</string>
-			<string>IBUIImageView</string>
-			<string>IBUIViewController</string>
-			<string>IBProxyObject</string>
 			<string>IBUILabel</string>
-			<string>IBUITextField</string>
-			<string>IBUIScrollView</string>
 			<string>IBUIButton</string>
+			<string>IBUIImageView</string>
+			<string>IBUIView</string>
+			<string>IBUIScrollView</string>
+			<string>IBProxyObject</string>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -177,13 +175,13 @@
 												<nil key="IBUIHighlightedColor"/>
 												<int key="IBUIBaselineAdjustment">1</int>
 												<float key="IBUIMinimumFontSize">14</float>
-												<object class="IBUIFontDescription" key="IBUIFontDescription" id="699377659">
+												<object class="IBUIFontDescription" key="IBUIFontDescription">
 													<string key="name">Helvetica</string>
 													<string key="family">Helvetica</string>
 													<int key="traits">0</int>
 													<double key="pointSize">14</double>
 												</object>
-												<object class="NSFont" key="IBUIFont" id="525598900">
+												<object class="NSFont" key="IBUIFont">
 													<string key="NSName">Helvetica</string>
 													<double key="NSSize">14</double>
 													<int key="NSfFlags">16</int>
@@ -262,60 +260,13 @@
 										<int key="NSvFlags">268</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
-											<object class="IBUIView" id="587687824">
+											<object class="IBUIView" id="783981151">
 												<reference key="NSNextResponder" ref="271529655"/>
 												<int key="NSvFlags">268</int>
-												<object class="NSMutableArray" key="NSSubviews">
-													<bool key="EncodedWithXMLCoder">YES</bool>
-													<object class="IBUIView" id="113200431">
-														<reference key="NSNextResponder" ref="587687824"/>
-														<int key="NSvFlags">268</int>
-														<string key="NSFrame">{{10, 11}, {31, 31}}</string>
-														<reference key="NSSuperview" ref="587687824"/>
-														<reference key="NSWindow"/>
-														<reference key="NSNextKeyView" ref="487917368"/>
-														<object class="NSColor" key="IBUIBackgroundColor">
-															<int key="NSColorSpace">3</int>
-															<bytes key="NSWhite">MQA</bytes>
-															<reference key="NSCustomColorSpace" ref="66764138"/>
-														</object>
-														<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-													</object>
-													<object class="IBUITextField" id="487917368">
-														<reference key="NSNextResponder" ref="587687824"/>
-														<int key="NSvFlags">268</int>
-														<string key="NSFrame">{{52, 11}, {250, 31}}</string>
-														<reference key="NSSuperview" ref="587687824"/>
-														<reference key="NSWindow"/>
-														<reference key="NSNextKeyView" ref="661979840"/>
-														<bool key="IBUIClipsSubviews">YES</bool>
-														<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-														<int key="IBUIContentVerticalAlignment">0</int>
-														<string key="IBUIText"/>
-														<int key="IBUIBorderStyle">3</int>
-														<string key="IBUIPlaceholder">Add a comment</string>
-														<object class="NSColor" key="IBUITextColor">
-															<int key="NSColorSpace">3</int>
-															<bytes key="NSWhite">MAA</bytes>
-															<reference key="NSCustomColorSpace" ref="66764138"/>
-														</object>
-														<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
-														<float key="IBUIMinimumFontSize">17</float>
-														<object class="IBUITextInputTraits" key="IBUITextInputTraits">
-															<int key="IBUIAutocapitalizationType">2</int>
-															<int key="IBUIKeyboardAppearance">1</int>
-															<int key="IBUIReturnKeyType">7</int>
-															<bool key="IBUIEnablesReturnKeyAutomatically">YES</bool>
-															<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-														</object>
-														<reference key="IBUIFontDescription" ref="699377659"/>
-														<reference key="IBUIFont" ref="525598900"/>
-													</object>
-												</object>
 												<string key="NSFrameSize">{310, 53}</string>
 												<reference key="NSSuperview" ref="271529655"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="113200431"/>
+												<reference key="NSNextKeyView" ref="661979840"/>
 												<string key="NSReuseIdentifierKey">_NS:196</string>
 												<object class="NSColor" key="IBUIBackgroundColor">
 													<int key="NSColorSpace">3</int>
@@ -328,7 +279,7 @@
 										<string key="NSFrame">{{0, 112}, {310, 53}}</string>
 										<reference key="NSSuperview" ref="749710472"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="587687824"/>
+										<reference key="NSNextKeyView" ref="783981151"/>
 										<reference key="IBUIBackgroundColor" ref="124712397"/>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
@@ -417,7 +368,7 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">toolbar_stampButton.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="935546121">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="866391060">
 							<string key="name">HelveticaNeue-Bold</string>
 							<string key="family">Helvetica Neue</string>
 							<int key="traits">2</int>
@@ -456,7 +407,7 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">toolbar_todoButton.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="935546121"/>
+						<reference key="IBUIFontDescription" ref="866391060"/>
 						<reference key="IBUIFont" ref="663283930"/>
 					</object>
 					<object class="IBUIButton" id="537858746">
@@ -486,7 +437,7 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">toolbar_shareButton.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="935546121"/>
+						<reference key="IBUIFontDescription" ref="866391060"/>
 						<reference key="IBUIFont" ref="663283930"/>
 					</object>
 					<object class="IBUIButton" id="325334347">
@@ -516,7 +467,7 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">toolbar_likeButton.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="935546121"/>
+						<reference key="IBUIFontDescription" ref="866391060"/>
 						<reference key="IBUIFont" ref="663283930"/>
 					</object>
 					<object class="IBUILabel" id="763577215">
@@ -541,7 +492,7 @@
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="770341327">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="862141629">
 							<string key="name">Helvetica-Bold</string>
 							<string key="family">Helvetica</string>
 							<int key="traits">2</int>
@@ -575,7 +526,7 @@
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="770341327"/>
+						<reference key="IBUIFontDescription" ref="862141629"/>
 						<reference key="IBUIFont" ref="74241631"/>
 					</object>
 					<object class="IBUILabel" id="970363619">
@@ -600,7 +551,7 @@
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="770341327"/>
+						<reference key="IBUIFontDescription" ref="862141629"/>
 						<reference key="IBUIFont" ref="74241631"/>
 					</object>
 					<object class="IBUILabel" id="337528872">
@@ -625,7 +576,7 @@
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="770341327"/>
+						<reference key="IBUIFontDescription" ref="862141629"/>
 						<reference key="IBUIFont" ref="74241631"/>
 					</object>
 				</object>
@@ -642,15 +593,6 @@
 					<bool key="IBUIPrompted">NO</bool>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-			</object>
-			<object class="IBUIViewController" id="558121045">
-				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
-				<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
-					<int key="IBUIInterfaceOrientation">1</int>
-					<int key="interfaceOrientation">1</int>
-				</object>
-				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<bool key="IBUIHorizontal">NO</bool>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -810,25 +752,9 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">addCommentField</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="487917368"/>
-					</object>
-					<int key="connectionID">29</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">currentUserImageView</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="113200431"/>
-					</object>
-					<int key="connectionID">36</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">addCommentContainerView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="587687824"/>
+						<reference key="destination" ref="783981151"/>
 					</object>
 					<int key="connectionID">89</int>
 				</object>
@@ -866,14 +792,6 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">64</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="487917368"/>
-						<reference key="destination" ref="372490531"/>
-					</object>
-					<int key="connectionID">55</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -984,7 +902,7 @@
 						<reference key="object" ref="271529655"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="587687824"/>
+							<reference ref="783981151"/>
 						</object>
 						<reference key="parent" ref="749710472"/>
 						<string key="objectName">Comments View</string>
@@ -1000,11 +918,6 @@
 						<reference key="object" ref="661979840"/>
 						<reference key="parent" ref="749710472"/>
 						<string key="objectName">Bottom Ripple</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">46</int>
-						<reference key="object" ref="558121045"/>
-						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">47</int>
@@ -1110,26 +1023,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">87</int>
-						<reference key="object" ref="587687824"/>
+						<reference key="object" ref="783981151"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="487917368"/>
-							<reference ref="113200431"/>
 						</object>
 						<reference key="parent" ref="271529655"/>
 						<string key="objectName">Add Comment Container View</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">28</int>
-						<reference key="object" ref="487917368"/>
-						<reference key="parent" ref="587687824"/>
-						<string key="objectName">Add Comment Text Field</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">34</int>
-						<reference key="object" ref="113200431"/>
-						<reference key="parent" ref="587687824"/>
-						<string key="objectName">Current User's Image View</string>
 					</object>
 				</object>
 			</object>
@@ -1158,16 +1057,12 @@
 					<string>23.IBPluginDependency</string>
 					<string>23.IBUserGuides</string>
 					<string>25.IBPluginDependency</string>
-					<string>28.IBPluginDependency</string>
-					<string>34.CustomClassName</string>
-					<string>34.IBPluginDependency</string>
 					<string>38.CustomClassName</string>
 					<string>38.IBPluginDependency</string>
 					<string>40.IBPluginDependency</string>
 					<string>41.IBPluginDependency</string>
 					<string>44.IBPluginDependency</string>
 					<string>45.IBPluginDependency</string>
-					<string>46.IBPluginDependency</string>
 					<string>47.IBPluginDependency</string>
 					<string>48.IBPluginDependency</string>
 					<string>49.IBPluginDependency</string>
@@ -1215,11 +1110,7 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UserImageView</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>UserImageView</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1324,14 +1215,12 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>activityView</string>
 							<string>addCommentContainerView</string>
-							<string>addCommentField</string>
 							<string>addFavoriteButton</string>
 							<string>addFavoriteLabel</string>
 							<string>bottomToolbar</string>
 							<string>commenterImageView</string>
 							<string>commenterNameLabel</string>
 							<string>commentsView</string>
-							<string>currentUserImageView</string>
 							<string>eDetailArrowImageView</string>
 							<string>headerView</string>
 							<string>likeButton</string>
@@ -1347,15 +1236,13 @@
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIView</string>
-							<string>UIView</string>
-							<string>UITextField</string>
+							<string>StampDetailAddCommentView</string>
 							<string>UIButton</string>
 							<string>UILabel</string>
 							<string>UIView</string>
 							<string>UserImageView</string>
 							<string>UILabel</string>
 							<string>UIView</string>
-							<string>UserImageView</string>
 							<string>UIImageView</string>
 							<string>UIView</string>
 							<string>UIButton</string>
@@ -1375,14 +1262,12 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>activityView</string>
 							<string>addCommentContainerView</string>
-							<string>addCommentField</string>
 							<string>addFavoriteButton</string>
 							<string>addFavoriteLabel</string>
 							<string>bottomToolbar</string>
 							<string>commenterImageView</string>
 							<string>commenterNameLabel</string>
 							<string>commentsView</string>
-							<string>currentUserImageView</string>
 							<string>eDetailArrowImageView</string>
 							<string>headerView</string>
 							<string>likeButton</string>
@@ -1403,11 +1288,7 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">addCommentContainerView</string>
-								<string key="candidateClassName">UIView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">addCommentField</string>
-								<string key="candidateClassName">UITextField</string>
+								<string key="candidateClassName">StampDetailAddCommentView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">addFavoriteButton</string>
@@ -1432,10 +1313,6 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">commentsView</string>
 								<string key="candidateClassName">UIView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">currentUserImageView</string>
-								<string key="candidateClassName">UserImageView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">eDetailArrowImageView</string>
