--- a/sites/stamped.com/bin/alerts/templates/email_restamp.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_restamp.html.j2
@@ -102,9 +102,9 @@
                     <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 <tr>
-                    <td width="10" style="font-size:3px;line-height:3px;background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
-                    <td width="650" height="10" align="center" style="font-size:3px;line-height:3px;"><img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-ribbon-bottom.png" width="650" height="10"></td>
-                    <td width="10" style="font-size:3px;line-height:3px;background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="10" style="font-size:3px;line-height:3px;background-image:url(http://static.stamped.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="650" height="10" align="center" style="font-size:3px;line-height:3px;"><img src="http://static.stamped.com/assets/img/email-ribbon-bottom.png" width="650" height="10"></td>
+                    <td width="10" style="font-size:3px;line-height:3px;background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 <tr>
                     <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-bottomleft.png);background-repeat:no-repeat;"></td>
